--- a/Commerce-Client/package.json
+++ b/Commerce-Client/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser-dynamic": "^9.0.6",
     "@angular/router": "^9.0.5",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "minimist": "^1.2.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular-devkit/build-angular": "^0.900.6",
     "@angular/cli": "^9.0.6",
     "@angular/compiler-cli": "^9.0.6",
     "@angular/language-service": "^9.0.6",
